Fix z-index issue

--- a/assets/css/rbac.css
+++ b/assets/css/rbac.css
@@ -73,6 +73,7 @@ li {
 
 .rbac-navbar {
   margin-bottom: 20px !important;
+  z-index: 0 !important;
 }
 
 .navbar-collapse {
